[package]
name = "appr_dbscan_rust"
version = "0.1.0"
authors = ["Ivano Donadi <ivadonadi98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
debug = 2
lto = true
incremental = true
debug-assertions = true

[dependencies]
partitions = "0.2.4"
rstar = "0.8.2"