[package]
name = "appr_dbscan_rust"
version = "0.1.0"
authors = ["Ivano Donadi <ivadonadi98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "appr_dbscan"
path = "src/lib.rs"

[[bin]]
name = "appr_dbscan"
path = "src/main.rs"


[profile.release]
opt-level = 2
lto = true
incremental = true
#debug = 2
#debug-assertions = true

[dependencies]
partitions = "0.2.4"
rstar = "0.8.2"